--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,4 +32,36 @@
     margin-top: 3em;
     padding-top: 5em;
     padding-bottom: 5em;
+    font-family: Georgia;
+}
+.btn{
+    margin-top: 5em;
+    padding-top: 5em;
+    padding-right: 5em;
+    padding-left: 5em;
+    padding-bottom: 5em;
+}
+
+.bottom{
+    background-color: black;
+    width: 100%;
+}
+.chicago{
+    padding-top: 10em;
+    padding-left: 10em;
+    padding-bottom: 10em;
+    margin-left: 5em;
+}
+.info{
+    padding-top: 2em;
+    
+}
+.shows{
+    padding-top: 2em;
+}
+.social{
+    padding-top: 2em;
+}
+p{
+    color: white;
 }
